# clientflow-ai

./: .env.example  .gitignore  API_SETUP_GUIDE.md  PRD.md  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 923cf8c9a210_initial_migration.py
backend/api/: clients.py  dashboard.py  proposals.py  research.py  webhooks.py  workflows.py
backend/core/: config.py  database.py  exceptions.py  logging.py
backend/integrations/: n8n_client.py  openai_client.py  tavily_client.py  zoho_crm.py
backend/models/: __init__.py  activity.py  client.py  proposal.py  research.py  workflow.py
backend/resources/: aHR0cHM6Ly93d3cuem9ob2FwaXMuaW5zdXByZW1lZng1NzNAZ21haWwuY29tOjYwMDc3NzU5NDcy.json
backend/schemas/: __init__.py  activity.py  client.py  proposal.py  research.py  workflow.py
backend/services/: client_service.py  email_service.py  proposal_service.py  research_service.py  workflow_service.py
backend/utils/: retry.py
docker/: init-db.sh
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activities/: page.tsx
frontend/src/app/clients/: ClientTableBody.tsx  page.tsx
frontend/src/app/clients/[id]/: SyncZohoButton.tsx  page.tsx
frontend/src/app/clients/new/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx  layout.css
frontend/src/components/ui/: Card.tsx  StatusBadge.tsx
frontend/src/services/: api.ts
n8n/: N8N_WORKFLOW_SETUP.md  n8n_client_onboarding_workflow.json
